fix some layout issues

--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -6,3 +6,5 @@ $radius: 3px
 
 $shadow-color: map-get($theme, shadow1)
 $shadow-color-hover: map-get($theme, shadow2)
+
+$basket-list-max-width: 1380px
